# task-tracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: release.yaml
include/cli/: Commands.h
include/core/: Task.h  TaskManager.h  TaskStatus.h
src/: main.cpp
src/cli/: Commands.cpp
src/core/: Task.cpp  TaskManager.cpp  TaskStatus.cpp
